# Esp32IoT

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c
main/include/: http_server.h  i2c_driver.h  mpu_6050.h  payload_message.h  sensor_data.h  tcp_client.h  wifi_ap_config.h  wifi_sta_mode.h
main/src/: http_server.c  i2c_driver.c  mpu_6050.c  payload_message.c  sensor_data.c  tcp_client.c  wifi_ap_config.c  wifi_sta_mode.c
